# omsi-vpn-3x-ui-panel-cli

./: .gitignore  launcher.sh  project_tree.txt  pyproject.toml  readme.md  run_launcher.bat
.envs/: .env.example
config/: local.yml
src/app/: di.py  main.py
src/app/application/: dto.py  ports.py
src/app/application/facades/: app_facade.py  panel_facade.py
src/app/application/use_cases/: create_client.py  delete_user.py  get_user.py  get_users_list.py
src/app/bootstrap/: cli.py
src/app/bootstrap/cli_actions/: commands.py  menu.py
src/app/common/errors/: exceptions.py
src/app/common/logging/: logger.py
src/app/common/ui/: blocks.py
src/app/common/ui/builders/: main_screen.py
src/app/common/utils/: config_loader.py  tools.py
src/app/config/: settings.py
src/app/infrastructure/control_panel/: gateway.py
src/app/infrastructure/http/: base_client.py
src/app/presentation/cli_ui/: format.py  handlers.py  menu.py  prompts.py  registry.py
